refactor: Java 25 final sweep - integration, procletService, spiffe modules
- YawlPromptSpecifications: String.formatted() calls
- EligibilityWorkflow/PartyAgent: var locals, stream operations
- SpiffeWorkloadIdentity: String.formatted() for toString()
- ZaiService: var locals, switch expressions
- ProcletModel/DBConnection: String.formatted() instead of String.format()

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF